# Groundhog

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Setup.sh  analyze_experiments.sh  check_data_sanity.sh  check_data_sanity_groundhog.sh  commonvar.h  docker-compose.yml  entry.sh  experiment.sh  index.html  out.txt  parse-OPRF-times.sh  readme.md  restart.py  run-tests.sh  state.txt  testing_main  uptime_server.py
DiSE/: CMakeLists.txt
DiSE/dEncFrontend/: main.cpp
DiSE/dEnc_tests/: AmmrClient_tests.cpp  Npr03DPRF_tests.cpp
DiSE/test/: GroupChannel.h  Helloworld.cpp  RandomNodePicker.h  util.cpp
dEnc/distEnc/: AmmrClient.cpp
dEnc/dprf/: Npr03AsymDprf.cpp  Npr03SymDprf.cpp  Npr03SymDprf.h
dEnc/tools/: MultiKeyAES.h
dEncFrontend/: main.cpp  util.cpp
dEnc_tests/: AmmrClient_tests.cpp  Npr03DPRF_tests.cpp  RandomNodePicker.h
data/: cur_reboot_seq.txt  cur_states.txt  state.txt
data/reboot_sequence_logs/: README.md  states_12_10_1M.txt  states_12_1_100k.txt  states_12_2_1M.txt  states_12_3_1M.txt  states_12_4_1M.txt  states_12_5_1M.txt  states_12_7_1M.txt  states_12_8_1M.txt  states_12_9_1M.txt  states_16_10_1M.txt  states_16_11_1M.txt  states_16_12_1M.txt  states_16_13_1M.txt  states_16_14_1M.txt  states_16_1_100k.txt  states_16_2_1M.txt  states_16_3_1M.txt  states_16_4_1M.txt  states_16_5_1M.txt  states_16_6_1M.txt  states_16_7_1M.txt  (+40 more)
test/: Algorithm.h  CMakeLists.txt  GroupChannel.h  Helloworld.cpp  RandomNodePicker.cpp  RandomNodePicker.h  client.cpp  commonvar.h  util.cpp  util.h
test/tools/: GroupChannel.h
(+484 files in other folders)
